--- a/style.css
+++ b/style.css
@@ -67,8 +67,9 @@ h3>a{
     overflow: hidden;
 }
 
+
 #hero-image{
-    min-width: 100%;
+    width: 100%;
     object-fit: cover;
     height: calc(100vh - 70px);
     opacity: 0.3;
@@ -81,7 +82,8 @@ h3>a{
     position: absolute;
     top: 0;
     right: 0;
-    transform: translate(-90px,60px);
+     /* transform: translate(-300px,10px); */
+    
     
 }
 .tile{
@@ -105,7 +107,8 @@ h3>a{
     position: relative;
     background-color:white;
     border-radius: 8px;
-    margin-top: 60px;
+    margin-top: 70px;
+    margin-right: 200px;
     display: flex;
     align-items: flex-end;
 }
@@ -213,27 +216,23 @@ font-weight: 700;
 #header-year{
     font-size: 12px;
 }
-}
 
-
-/* working on the notification tiles */
-
-#landing-items{
+.form{
     
-    transform: translate(-50px,10px);
-
-
+    margin-right:1px;
+    
 }
+}
+
 
 /* mobile view */
 @media (max-width: 575.98px){
     .container{
         width: 100%;
     }
+    
 
-    *.container{
-        min-width: 90%;
-    }
+   
     /* starting out with the header */
 
 #nav{
@@ -247,6 +246,7 @@ font-weight: bold;
 
 #header-year{
     font-size: 12px;
+    display: none;
 }
 
 
