--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ a:hover{
 body{
     background-color: #F9F8F8;
     color: var(--text-color);
+    position: relative;
 }
 
 /* starting out with the header */
@@ -195,6 +196,32 @@ text-align: center;
 }
 
 
+/* creating the popup */
+#pop-btn{
+    background-color: var(--primary-color);
+    color: white;
+    font-weight: bold;
+    border:none;
+    padding: 8px 16px;
+    position: relative;
+    float: right;
+    margin-right: 20%;
+}
+
+
+#pop-wrapper{
+    /* position: relative; */
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.822);
+    z-index: 50;
+    position: absolute;
+    z-index: 99;
+    top: 0px;
+    padding-top: 50px;
+    
+}
+
 
 /* working on media queries */
 /* tablet view */
@@ -261,3 +288,5 @@ font-weight: bold;
     }
     
 }
+
+/* so help me God */
